--- a/trakberry/templates/scrap_entries.html
+++ b/trakberry/templates/scrap_entries.html
@@ -24,27 +24,27 @@
 		<td></td>
 		<td>
 			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			<a href="{{request.session.local_toggle}}/scrap_entries/{{i.1}}">{{i.1}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.1}}</a>
 
 		</td>
 		<td>
 			<!-- change from i.1 to i.2 when not troubleshooting for Id value-->
-			<a href="{{request.session.local_toggle}}/scrap_entries/{{i.1}}">{{i.0}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.2}}</a>
         </td>
         <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries/{{i.1}}">{{i.3}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.3}}</a>
         </td>
         <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries/{{i.1}}">{{i.4}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.4}}</a>
         </td>
         <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries/{{i.1}}">{{i.5}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.5}}</a>
         </td>
         <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries/{{i.1}}">{{i.6}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.6}}</a>
         </td>
         <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries/{{i.1}}">{{i.7}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.7}}</a>
 		</td>
 		<td></td>
 	</tr>
