--- a/trakberry/templates/scrap_display_edit_entries.html
+++ b/trakberry/templates/scrap_display_edit_entries.html
@@ -49,7 +49,7 @@
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="{{request.session.tmp_scrap3.1}}" value={{request.session.tmp_scrap3.0.4}}></td>
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="{{request.session.tmp_scrap3.1}}" value={{request.session.tmp_scrap3.0.5}}></td>
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="{{request.session.tmp_scrap3.1}}" value={{request.session.tmp_scrap3.0.6}}></td>
-              <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="{{request.session.tmp_scrap3.1}}" value={{request.session.tmp_scrap3.0.7}}></td>
+              <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="{{request.session.tmp_scrap3.1}}" value={{request.session.tmp_scrap3.0.7}} type = "date"></td>
           </tr>
             <!-- <textarea rows = "3" cols = "10" name = "{{i.0}}">{{i.1}}</textarea>
         
