--- a/trakberry/templates/scrap_display_edit_entries.html
+++ b/trakberry/templates/scrap_display_edit_entries.html
@@ -49,7 +49,7 @@
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scrap_amount" value={{request.session.tmp_scrap3.0.4}} ></td>
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scarp_line" value={{request.session.tmp_scrap3.0.5}}></td>
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="total_cost" value={{request.session.tmp_scrap3.0.6}}></td>
-              <td><input style="width:100px; height:40px; word-wrap: break-word;" type="datetime-local"  name="date" value={{request.session.tmp_scrap3.0.7}}></td>
+              <td><input style="width:100px; height:80px; word-wrap: break-word;"   name="date" value={{request.session.tmp_scrap3.0.7}}></td>
           </tr>
             <!-- <textarea rows = "3" cols = "10" name = "{{i.0}}">{{i.1}}</textarea>
         
@@ -61,7 +61,7 @@
 </table>
 
 </form>
-
+<!-- type="datetime-local" -->
 
 </center>
 {% endblock %}
