--- a/trakberry/templates/tech_login.html
+++ b/trakberry/templates/tech_login.html
@@ -38,23 +38,25 @@
 
 <b><u>Tech Name</b></u>&nbsp;
 <select name ="user">
+	<option value="Dan Deighton">Dan Deighton</option>
+	<option value="Dave McLaren">Dave McLaren</option>
 	<option value="Derek Peachey">Derek Peachey</option>
 	<option value="Ervin Kuepfer">Ervin Kuepfer</option>
-	<option value="Greg Hundt">Greg Hundt</option>
 	<option value="Jered Pankratz">Jered Pankratz</option>
+	<option value="James Kuepfer">James Kuepfer</option>
+	<option value="Jonathan Brunk">Jonathan Brunk</option>
+	<option value="Jeremy Bourque">Jeremy Bourque</option>	
 	<option value="Jim Barker">Jim Barker</option>
-	<option value="Dave McLaren">Dave McLaren</option>
-	<option value="Kyle Scheuerman">Kyle Scheuerman</option>
 	<option value="Les Vaters">Les Vaters</option>
 	<option value="Mayank Gehlot">Mayank Gehlot</option>
 	<option value="Muoi Le">Muoi Le</option>
 	<option value="Paul Wilson">Paul Wilson</option>
-	<option value="Phuc Bui">Phuc Bui</option>
 	<option value="Rob Wood">Rob Wood</option>
 	<option value="Scott Smith">Scott Smith</option>
+	<option value="Scott Warner">Scott Warner</option>	
 	<option value="Terry Kennedy">Terry Kennedy</option>
 	<option value="Toby Kuepfer">Toby Kuepfer</option>
-	<option value="Woodrow Sismar">Woodrow Sismar</option>	
+	
 </select>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
