--- a/trakberry/templates/scrap_display_edit_entries.html
+++ b/trakberry/templates/scrap_display_edit_entries.html
@@ -5,7 +5,7 @@
         table {
           border-collapse: collapse;
           border-spacing: 0;
-          width: 99%;
+          width: 99%;scrap_ent = 0
           border: 1px solid #ddd;
         }
         th, td {
