--- a/trakberry/templates/scrap_mgmt_category_shift.html
+++ b/trakberry/templates/scrap_mgmt_category_shift.html
@@ -5,7 +5,7 @@
 <!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
 <table class="center">
-	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Part: {{request.session.scrap_24hrs_part}}</u>
+	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Part: {{request.session.scrap_24hrs_part}}
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		Operation: {{request.session.scrap_24hrs_operation}}
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
