--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -38,10 +38,13 @@
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits<b class="caret"></b></a>
                             <ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
                                <li><a href="{{request.session.local_toggle}}/scrap_entries">Entries</a></li>
-                               <li><a href="#">Template</a></li>               
+                               <li><a href="#">Line Operation</a></li>
+                               <li><a href="#">Operation Department</a></li>
+                               <li><a href="#">Part Cost</a></li>
+                               <li><a href="#">Part Line</a></li>               
                            </ul>
 			    	    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-			    	    <li><a href="#"><span class="glyphicon glyphicon-folder-open"></span> Manpower</a></li>
+			    	    <!-- <li><a href="#"><span class="glyphicon glyphicon-folder-open"></span> Manpower</a></li> -->
 			            </ul>	
 			            <ul class="nav navbar-nav navbar-right">	
 			                <li><font size ="2" style="color:rgb(100, 100, 100)">Welcome: <b>{{request.session.scrap_mgmt_login_name}}</b></li>
