--- a/trakberry/templates/redirect_schedule1.html
+++ b/trakberry/templates/redirect_schedule1.html
@@ -3,6 +3,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<meta http-equiv="refresh" content="0; url=/trakberry/schedule_set2" />
+<meta http-equiv="refresh" content="0; url=/trakberry/" />
 </body>
 </html>
