--- a/trakberry/templates/scrap_display_date_pick_form.html
+++ b/trakberry/templates/scrap_display_date_pick_form.html
@@ -32,24 +32,15 @@
     <!-- </td></tr> -->
     <th>Start Date</th>
     <th>End Date</th>
-    <th>Category</th>
-    <th>Amount</th>
-    <th>Line</th>
-    <th>Cost</th>
-    <th>Date</th><br></tr>
+</tr>
 
     <!-- <tr>
      <td nowrap><font size ="2" style="color:rgb(155, 39, 39)">
     </tr>     -->
             <tr>
-						<td></td>
-							<td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scrap_part" value="{{request.session.tmp_scrap3.0.1}}"></td>
-							<td><input style="width:200px; height:40px; word-wrap: break-word;"   name="scrap_operation" value="{{request.session.tmp_scrap3.0.2}}"></td>
-              <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scrap_category" value="{{request.session.tmp_scrap3.0.3}}"></td>
-              <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scrap_amount" value={{request.session.tmp_scrap3.0.4}} ></td>
-              <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scarp_line" value="{{request.session.tmp_scrap3.0.5}}"></td>
-              <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="total_cost" value={{request.session.tmp_scrap3.0.6}} disabled></td>
-              <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="date" value={{request.session.tmp_scrap3.0.7}} type="datetime-local"></td>
+							<td></td>
+							<td><input style="width:200px; height:40px; word-wrap: break-word;"   name="scrap_display_date1" value="{{request.session.date1_default}}" type="datetime-local"></td>
+							<td><input style="width:200px; height:40px; word-wrap: break-word;"   name="scrap_display_date2" value="{{request.session.date1_default}}" type="datetime-local"></td>
           </tr>
             <!-- <textarea rows = "3" cols = "10" name = "{{i.0}}">{{i.1}}</textarea>
         
