--- a/trakberry/templates/scrap_display_edit_entries.html
+++ b/trakberry/templates/scrap_display_edit_entries.html
@@ -30,8 +30,8 @@
 
 
     <!-- </td></tr> -->
-    <th>Start Date</th>
-    <th>End Date</th>
+    <th>Part Number</th>
+    <th>Operation</th>
     <th>Category</th>
     <th>Amount</th>
     <th>Line</th>
