--- a/trakberry/templates/redirect_scrap_mgmt.html
+++ b/trakberry/templates/redirect_scrap_mgmt.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/scrap_display" />
+<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/scrap_mgmt" />
