--- a/trakberry/templates/scrap_operation_dept.html
+++ b/trakberry/templates/scrap_operation_dept.html
@@ -33,12 +33,12 @@
 		<td></td>
 		<td>
 			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.1}}</a>
+			<a href="{{request.session.local_toggle}}/operation_entries_update/{{i.0}}">{{i.1}}</a>
 
 		</td>
 		<td>
 			<!-- change from i.1 to i.2 when not troubleshooting for Id value-->
-			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.2}}</a>
+			<a href="{{request.session.local_toggle}}/operation_entries_update/{{i.0}}">{{i.2}}</a>
         </td>
         <!-- <td>
 			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.3}}</a>
