--- a/trakberry/templates/scrap_display_edit_operation_entries.html
+++ b/trakberry/templates/scrap_display_edit_operation_entries.html
@@ -44,8 +44,8 @@
     </tr>     -->
             <tr>
 						<td></td>
-							<td><input style="width:100px; height:40px; word-wrap: break-word;"   name="operation" value="{{request.session.tmp_scrap4.0.1}}"></td>
-							<td><input style="width:200px; height:40px; word-wrap: break-word;"   name="department" value="{{request.session.tmp_scrap4.0.2}}"></td>
+							<td><input style="width:100px; height:40px; word-wrap: break-word;"   name="Operation" value="{{request.session.tmp_scrap4.0.1}}"></td>
+							<td><input style="width:200px; height:40px; word-wrap: break-word;"   name="Dept" value="{{request.session.tmp_scrap4.0.2}}"></td>
               <!-- <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scrap_category" value="{{request.session.tmp_scrap3.0.3}}"></td>
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scrap_amount" value={{request.session.tmp_scrap3.0.4}} ></td>
               <td><input style="width:100px; height:40px; word-wrap: break-word;"   name="scarp_line" value="{{request.session.tmp_scrap3.0.5}}"></td>
