--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -38,7 +38,7 @@
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits<b class="caret"></b></a>
                             <ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
                                <li><a href="{{request.session.local_toggle}}/scrap_entries">Entries</a></li>
-                               <li><a href="">Line Operation</a></li>
+                               <li><a href="{{request.session.local_toggle}}/part_entries">Line Operation</a></li>
                                <li><a href="{{request.session.local_toggle}}/operation_department">Operation Department</a></li>
                                <li><a href="#">Part Cost</a></li>
                                <li><a href="#">Part Line</a></li>               
