--- a/trakberry/templates/scrap_edits.html
+++ b/trakberry/templates/scrap_edits.html
@@ -1,107 +1,77 @@
-{% extends "scrap_mgmt.html" %}
 
+{% extends "kiosk_scrap.html" %}
 
 {% block content %}
-<!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
-
-<table class="center">
-	<tr>
-		<!-- <th></th> -->
-		{% if request.session.scrap_prev >= 1 %}
-			<th><a href="{{request.session.local_toggle}}/part_entries_prev" class="previous round"> Previous</a></font></th>
-		{% else %}
-			<th></th>
-		{% endif %}
-
-		<th>Part</th>
-        <!-- <th>Department</th> -->
-        <!-- <th>Category</th> -->
-        <!-- <th>Amount</th> -->
-        <!-- /<th>Line</th> -->
-        <!-- <th>Cost</th> -->
-		<!-- <th>Date</th>  -->
-		{% if request.session.scrap_next = 0 %}
-			<th></th>
-		{% else %}
-			<th><a href="{{request.session.local_toggle}}/part_entries_next">Next</a></th>
-		{% endif %}
-
-		<!-- <th>Scrap Cost</th> -->
-	</tr>
-	{% for i in request.session.tmp_part_entries %}
-	<tr>
-		<td></td>
-		<td>
-			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			<a href="{{request.session.local_toggle}}/part_entries_update/{{i.0}}">{{i.1}}</a>
-
-		</td>
-		<!-- <td>
-			change from i.1 to i.2 when not troubleshooting for Id value-->
-			<!-- <a href="{{request.session.local_toggle}}/operation_entries_update/{{i.0}}">{{i.2}}</a> -->
-        <!-- </td> -->
-        <!-- <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.3}}</a>
-        </td> -->
-        <!-- <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.4}}</a>
-        </td> -->
-        <!-- <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.5}}</a>
-        </td> -->
-        <!-- <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.6}}</a>
-        </td> -->
-        <!-- <td>
-			<a href="{{request.session.local_toggle}}/scrap_entries_update/{{i.0}}">{{i.7}}</a>
-		</td> -->
-		<td></td>
-	</tr>  
-{% endfor %}
-
-</table>
 
 
+  <h1>Scrap Edits</h1>
+  <form action="" method="post">{% csrf_token %}
+    <center>
+    <div class="grid-container">
+        
+        
+<!-- 
+        <div class="item1">
+            <select id="scrap_part" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();" list="browsers" name="scrap_part"  {{request.session.scrap1}}>	
+                <option value="1" selected disabled>{{request.session.scrap_part}}</option>
+                {% for item in request.session.scrap_part_selection %}
+                <option value="{{item.0}}">{{item.0}}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="item2">
+            <select id="scrap_operation" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();" list="browsers" name="scrap_operation" type="number" {{request.session.scrap2}}>	
+				<!-- <option value="0" selected disabled>{{request.session.scrap_operation}}</option>
+				 -->
+				<!-- <option selected = "selected">{{request.session.scrap_operation}} </option>
 
-<!-- <center>
+                {% for item in request.session.scrap_operation_selection %}
+                <option value="{{item.0}}">{{item.0}}</option>
+                {% endfor %} -->
+                <!-- <option value="Secondary">Secondary</option>
+                <option value="Finishing">Finishing</option>
+                <option value="Compacting">Compacting</option> -->
+            <!-- </select>
+        </div>
+        <div class="item3">
+            <select id="scrap_category" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();"  list="browsers" name="scrap_category" type="number" {{request.session.scrap3}}>	
+                <option value="0" selected disabled>{{request.session.scrap_category}}</option>
+                {% for item in request.session.scrap_category_selection %}
+                <option value="{{item.0}}">{{item.0}}</option>
+                {% endfor %} -->
+                <!-- <option value="Dropped">Dropped</option>
+                <option value="Damaged">Damaged</option>
+                <option value="Oversize">Oversize</option>
+                <option value="Undersize">Undersize</option> -->
+            <!-- </select>
+				</div>
+				<div class="item4">
+					<font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
+			<br>
+					<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
+			</div> --> 
 
-	<form action="" method="post">{% csrf_token %}
-	<table style="overflow-x:auto;">
-		<tr><td nowrap>
+			
+			<div class="item1">
+				<input style="background-color: #AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;" type="button" value="Add Part">
+        </div>
+        
+        <div class="item2">
+					<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:90px;font-weight: 700;font-size:23px;align=right;" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap_reset';">Add Operation</button>
+        </div>
+
+		<div class="item3">
+
+				<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:90px;font-weight: 700;font-size:23px;align=right;" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_add_category';">Add Category</button>
+		</div>
+
+
+  
+	</div>
 	
-	<input style="background-color: rgb(177, 167, 182);border-radius: 10px;width:80px;height:30px;font-weight: 400;font-size:11px;align=left;" type="submit" value="Update">
-	
-	
-	
-		</td></tr>
-	<tr>
-		{% for x in request.session.table_headers %}
-			<td nowrap>
-				<font size ="2" style="color:rgb(180, 40, 40)">
-					<b>{{x}}</b> 
-				</font>
-			</td>
-		{% endfor %}
-	</tr>
-	{% for i in tmp%}
-		 <td nowrap><font size ="2" style="color:rgb(100, 100, 100)">
-	
-			{% if i.2 == 1%}         
-				<input style="width:150px; height:40px; word-wrap: break-word;"  type="date" name="{{i.0}}" value={{i.1}}>
-			{% elif i.0 > 1 %}
-				<textarea rows = "3" cols = "10" name = "{{i.0}}">{{i.1}}</textarea>
-			{% else %}
-				<textarea readonly rows = "3" cols = "10" name = "{{i.0}}" style="background-color: rgb(197, 197, 197);">{{i.1}}</textarea>
-			{% endif %}
-		 </td>
-	
-	{% endfor %}
-	</table>
-	
-	</form>
-	
-	
-	</center> -->
-
+	<br>
+    </center>
+    </form>  
 
 {% endblock %}
+  
