--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -73,6 +73,12 @@
 		transform: translateY(8px);
 	}
 </style>
+
+<script>
+	function myFunction() {
+		   document.querySelectorAll("input[type=submit]")[0].click();
+	   }
+   </script>
 <!-- {% block grid %} -->
 	<!-- Include Styling for Buttons and Frames -->
 	<!-- <link rel="stylesheet" href="/static/style_1/grid_kiosk_main2.css?{{request.session.TCUR}}"> -->
