--- a/trakberry/templates/edit_category.html
+++ b/trakberry/templates/edit_category.html
@@ -25,7 +25,7 @@
 <table style="overflow-x:auto;">
     <tr><th nowrap>
 
-<input style="background-color: rgb(177, 167, 182);border-radius: 10px;width:80px;height:30px;font-weight: 400;font-size:11px;align=left;" type="submit" value="Update"></th>
+<input style="background-color: rgb(177, 167, 182);border-radius: 10px;width:80px;height:30px;font-weight: 400;font-size:11px;align=left;" type="submit" value="Enter"></th>
 
 
 
