--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -48,7 +48,31 @@
 				<div class="item4">
 					<font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
 			<br>
-					<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
+            <div id="numericInput" >
+                <div id="numBox"></div>
+                <table id="scrap_amount" name="scrap_amount" style="font-size:23px;width:190px;height:60px;" type= "number" {{request.session.scrap4}} >
+                    <tr>
+                        <td class="key">1</td>
+                        <td class="key">2</td>
+                        <td class="key">3</td>
+                    </tr>
+                    <tr>
+                        <td class="key">4</td>
+                        <td class="key">5</td>
+                        <td class="key">6</td>
+                    </tr>
+                    <tr>
+                        <td class="key">7</td>
+                        <td class="key">8</td>
+                        <td class="key">9</td>
+                    </tr>
+                    <tr>
+                        <td class="btn">DEL</td>
+                        <td class="key">0</td>
+                        <td class="btn">CLR</td>
+                    </tr>
+                </table>
+            </div>
 			</div>
 
 			
