--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -45,12 +45,24 @@
                 <option value="Undersize">Undersize</option> -->
             </select>
 				</div>
-				<div class="item4">
+				<!-- <div class="item4">
 					<font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
 			<br>
-            <div id="numericInput" >
-                <div id="numBox"></div>
-                <table id="scrap_amount" name="scrap_amount" style="font-size:23px;width:190px;height:60px;" type= "number" {{request.session.scrap4}} >
+					<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
+            </div> -->
+            <!-- <div class="item4">
+                <font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
+        <br>
+                <input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
+        </div> -->
+            <div id="numericInput" class="item4">
+                <font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
+                <br>
+                <input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
+                <!-- <div id="numBox"> -->
+                <!-- <div id="numBox"></div>     -->
+                
+                <table id= "keypad">
                     <tr>
                         <td class="key">1</td>
                         <td class="key">2</td>
@@ -73,7 +85,7 @@
                     </tr>
                 </table>
             </div>
-			</div>
+			
 
 			
 			<div class="item1">
