--- a/trakberry/templates/kiosk_scrap.html
+++ b/trakberry/templates/kiosk_scrap.html
@@ -86,6 +86,7 @@
     color:black;
     cursor:pointer;
     background-color:DimGray;
+    /* background-size: 63px; */
     width:33.3%;
 }
 .btn:hover{
