updated Scrap Kiosk

--- a/trakberry/templates/kiosk_scrap.html
+++ b/trakberry/templates/kiosk_scrap.html
@@ -8,9 +8,46 @@
 	<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
 	<!-- ***********************************************************************************-->
 
-	<link rel="stylesheet" href="/static/style_1/grid_kiosk_job_assign.css">
     
+<style>
+.grid-container {
+  display: grid;
+  border-radius: 30px;
+  background-color: #DCDCDC;
+  grid-template-columns: auto auto auto auto auto auto;
+  grid-gap: 5px;
+  padding: 35px;
+  max-width: 900px;
+}
+.grid-container > div {
+  text-align: center;
+  padding: 10px 0;
+}
+.item1 {
+  grid-column: 1 / span 2;
+}
+.item2 {
+  grid-column: 3 / span 2;
+}
+.item3 {
+  grid-column: 5 / span 2;
+}
+.item4 {
+ 
+  grid-column: 7 / span 2;
 
+}
+.item5 {
+	grid-column: 1 / span 3;
+
+
+}
+.item6 {
+  grid-column: 4 / span 3;
+
+}
+
+</style>
 
 
 
