--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -46,23 +46,22 @@
             </select>
 				</div>
 				<div class="item4">
-					<font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
-			<br>
+
 					<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
 			</div>
 
-			
+			<br><br>
 			<div class="item1">
-				<input style="background-color: #AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;" type="submit" value="Enter">
+				<input style="background-color:#AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;"type="submit" value="Enter" />
+
         </div>
         
         <div class="item2">
 					<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap_reset';">Reset</button>
         </div>
 
-		<div class="item3">
-
-				<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap';">Cancel</button>
+		<div class="item4">
+			<button style="background-color:#fa7575;border-radius: 10px;width:240px;height:60px;font-weight: 700;font-size:23px;align=left;"type="submit" name="one" value="1" />Finished Entries</button>
 		</div>
 
 
