--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -46,39 +46,26 @@
             </select>
 				</div>
 				
-            <div id="numericInput" class="item4">
-                <font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
-                <br>
-                <input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
-                <!-- <div id="numBox"> -->
-                <!-- <div id="numBox"></div>     -->
-                
-                <table id= "keypad">
-                    <tr>
-                        <td class="key">1</td>
-                        <td class="key">2</td>
-                        <td class="key">3</td>
-                    </tr>
-                    <tr>
-                        <td class="key">4</td>
-                        <td class="key">5</td>
-                        <td class="key">6</td>
-                    </tr>
-                    <tr>
-                        <td class="key">7</td>
-                        <td class="key">8</td>
-                        <td class="key">9</td>
-                    </tr>
-                    <tr>
-                        <td class="btn">DEL</td>
-                        <td class="key">0</td>
-                        <td class="btn">CLR</td>
-                    </tr>
-                </table>
-            </div>
-			
-
-			
+             
+        <div class="item4">
+            <font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
+            <br>
+        	<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="text" {{request.session.scrap4}}>
+        </div>
+        <script>
+            window.addEventListener("load", function(){
+           
+            // numpad.attach({
+            //   id : "scrap_amount"
+            // });
+            numpad.attach({
+              id : "scrap_amount",
+              readonly : false, 
+              decimal : false,
+              max : 5
+            });
+          });
+        </script>
 			<div class="item1">
 				<input style="background-color: #AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;" type="submit" value="Enter">
         </div>
@@ -90,7 +77,10 @@
 		<div class="item3">
 
 				<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap';">Cancel</button>
-		</div>
+        </div>
+        
+
+
 
 
   
