--- a/trakberry/templates/kiosk_scrap.html
+++ b/trakberry/templates/kiosk_scrap.html
@@ -9,8 +9,10 @@
 	<!-- ***********************************************************************************-->
 
     <link rel="stylesheet" href="/static/style_1/grid_kiosk_job_assign.css">
-    <link href="numpad.css" rel="stylesheet">
-    <script src="numpad.js"></script>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="js/digitalKeyboard.js"></script>
+    <!-- <link href="numpad.css" rel="stylesheet">
+    <script src="numpad.js"></script> -->
     
 
 
@@ -52,6 +54,13 @@
     function myFunction() {
         document.querySelectorAll("input[type=submit]")[0].click();
     }
+    $("#scrap_amount").numKey();
+    $("#demo").numKey({
+    limit: 6
+    });
+    $("#demo").numKey({
+    disorder: true
+    });
 
 </script>
 </head>
