--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -52,7 +52,7 @@
             <br>
         	<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="text" {{request.session.scrap4}}>
         </div>
-        <script>
+        <!-- <script>
             window.addEventListener("load", function(){
            
             // numpad.attach({
@@ -65,7 +65,7 @@
               max : 5
             });
           });
-        </script>
+        </script> -->
 			<div class="item1">
 				<input style="background-color: #AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;" type="submit" value="Enter">
         </div>
