added number pad to scrap entry.  Added time out on scrap entry

--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -1,8 +1,11 @@
 
 {% extends "kiosk_scrap.html" %}
 
-{% block content %}
 
+
+{% block content %}
+<!-- The below line will kick back to main scrap screen if it remains idle in scrap entry-->
+<meta http-equiv="refresh" content="45; url={{request.session.local_toggle}}/kiosk_scrap"/>
 
   <h1>Scrap</h1>
   <form action="" method="post">{% csrf_token %}
@@ -12,7 +15,7 @@
         
 
         <div class="item1">
-            <select id="scrap_part" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();" list="browsers" name="scrap_part"  {{request.session.scrap1}}>	
+            <select id="scrap_part" style="font-size:25px;widows: 100%;height:70px;" onchange="myFunction();" list="browsers" name="scrap_part"  {{request.session.scrap1}}>	
                 <option value="1" selected disabled>{{request.session.scrap_part}}</option>
                 {% for item in request.session.scrap_part_selection %}
                 <option value="{{item.0}}">{{item.0}}</option>
@@ -20,7 +23,7 @@
             </select>
         </div>
         <div class="item2">
-            <select id="scrap_operation" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();" list="browsers" name="scrap_operation" type="number" {{request.session.scrap2}}>	
+            <select id="scrap_operation" style="font-size:25px;width:90%;height:70px;" onchange="myFunction();" list="browsers" name="scrap_operation" type="number" {{request.session.scrap2}}>	
 				<!-- <option value="0" selected disabled>{{request.session.scrap_operation}}</option>
 				 -->
 				<option selected = "selected">{{request.session.scrap_operation}} </option>
@@ -34,7 +37,7 @@
             </select>
         </div>
         <div class="item3">
-            <select id="scrap_category" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();"  list="browsers" name="scrap_category" type="number" {{request.session.scrap3}}>	
+            <select id="scrap_category" style="font-size:25px;width:100%;height:70px;" onchange="myFunction();"  list="browsers" name="scrap_category" type="number" {{request.session.scrap3}}>	
                 <option value="0" selected disabled>{{request.session.scrap_category}}</option>
                 {% for item in request.session.scrap_category_selection %}
                 <option value="{{item.0}}">{{item.0}}</option>
@@ -47,7 +50,7 @@
 				</div>
 				<div class="item4">
 
-					<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
+					<input class="form-control" id = "num1" style="font-size:25px;width:50%;height:70px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
 			</div>
 
 			<br><br>
