added scrap kiosk to main kiosk

--- a/trakberry/templates/kiosk/kiosk_menu.html
+++ b/trakberry/templates/kiosk/kiosk_menu.html
@@ -16,16 +16,16 @@
 		<button class="button" type="submit" name="kiosk_button1" value="-2"><font size="6"><b>Production Entry<br>(End of Shift)</b></font></button>
 	</div>
 	<div class="frame1"><br><br><br><br><br><br><br>
-		<button class="button2" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_help_form';">
-			<font size="6"><b>Help</b></font>
+		<button class="button2" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap_entry';">
+			<font size="6"><b>Scrap</b></font>
 		</button>
 	</div>
-	<div class="frame1"><br><br><br><br><br><br><br>
+	<!-- <div class="frame1"><br><br><br><br><br><br><br>
 		<button class="button2" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_forklift_form';">
 			<font size="6"><b>Call Forklift</b></font>
 		</button>
 		<br><br><br><br>	
-	</div>
+	</div> -->
 </center>
 </form>
 {% endblock %}  <!-- End content Block -->
