--- a/trakberry/templates/kiosk_scrap.html
+++ b/trakberry/templates/kiosk_scrap.html
@@ -24,9 +24,11 @@
 .grid-container > div {
   text-align: center;
   padding: 10px 0;
+  scrollbar-width:100px;
 }
 .item1 {
   grid-column: 1 / span 2;
+  
 }
 .item2 {
   grid-column: 3 / span 2;
@@ -48,6 +50,11 @@
   grid-column: 4 / span 3;
 
 }
+
+
+
+			
+
 
 </style>
 
@@ -83,8 +90,36 @@
 	  transform: translateY(8px);
 	}
 
- 
+
+
+
 </style>
+
+<style>
+	/* width */
+	::-webkit-scrollbar {
+	  width: 60px;
+	}
+	
+	/* Track */
+	::-webkit-scrollbar-track {
+	  box-shadow: inset 0 0 5px grey; 
+	  border-radius: 10px;
+	}
+	 
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+	  background: red; 
+	  border-radius: 10px;
+	}
+	
+	/* Handle on hover */
+	::-webkit-scrollbar-thumb:hover {
+	  background: #b30000; 
+	}
+	</style>
+
+	
 <script>
     function myFunction() {
         document.querySelectorAll("input[type=submit]")[0].click();
@@ -99,12 +134,13 @@
 
 {% block content %}
 
+<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/kiosk_menu" />
 
-<div class="frame1"><br><br><br><br><br><br><br>
+<!-- <div class="frame1"><br><br><br><br><br><br><br>
 
 	<button class="button3" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap_entry';"><font size="7"><b>Scrap Entry</b></font></button>
 
-</div>
+</div> -->
 
 
 {% endblock %}
