--- a/trakberry/templates/track_10r.html
+++ b/trakberry/templates/track_10r.html
@@ -1,13 +1,26 @@
 <br><br>
+<meta http-equiv="refresh" content="5; url={{request.session.local_toggle}}/track_10r" />
 
 {{request.session.time}}
 
 <br><br>
 {{tm}}
 <br><br>
+shift time(sec):{{request.session.shift_time}}
+<br><br><br><br>
+target: {{request.session.target}}
+<br><br>
+Count: {{request.session.count}}
+<br><br>
+OA : {{request.session.oa}}%
+<br><br>
+Projection : {{request.session.projection}}
+<br><br>
+Date: {{dt}}<br>
 
-{{tm.3}}
 <br><br>
 
-Count: {{request.session.count}}
+
+
+
 <br><br>
