--- a/trakberry/templates/track_10r.html
+++ b/trakberry/templates/track_10r.html
@@ -1,22 +1,18 @@
 <br><br>
 <meta http-equiv="refresh" content="5; url={{request.session.local_toggle}}/track_10r" />
-
-{{request.session.time}}
-
+Live Tracking
 <br><br>
-{{tm}}
 <br><br>
 shift time(sec):{{request.session.shift_time}}
 <br><br><br><br>
-target: {{request.session.target}}
+Current shift target: {{request.session.target}}
 <br><br>
-Count: {{request.session.count}}
+Current Shift Count: {{request.session.count}}
 <br><br>
-OA : {{request.session.oa}}%
+Current Shift OA : {{request.session.oa}}%
 <br><br>
-Projection : {{request.session.projection}}
+End of Shift Projection : {{request.session.projection}}
 <br><br>
-Date: {{dt}}<br>
 
 <br><br>
 
