--- a/trakberry/templates/track_10r.html
+++ b/trakberry/templates/track_10r.html
@@ -28,6 +28,12 @@ Last Shift Count: {{request.session.count1}}
 <br><br>
 3rd Last Shift Count: {{request.session.count3}}
 <br><br>
+4th Last Shift Count: {{request.session.count4}}
+<br><br>
+5th Last Shift Count: {{request.session.count5}}
+<br><br>
+6th Last Shift Count: {{request.session.count6}}
+<br><br>
 
 
 
