--- a/trakberry/templates/track_10r.html
+++ b/trakberry/templates/track_10r.html
@@ -3,15 +3,23 @@
 <font size="6"><b><u>Live Tracking</u></b></font>
 <br><br><br><br>
 
-<!--
+<!-- 
 {{dt}}
 <br><br>
 shift time(sec):{{request.session.shift_time}}
 
+ -->
 
--->
 
-Current Shift Count: <b>{{request.session.count}}</b>
+Current Shift Count: <b>{{request.session.count}}</b> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.wd}} 
+{{request.session.m}}
+{{request.session.day}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift}} Shift
+
 <br><br>
 Current Shift OA : {{request.session.oa}}%
 <br><br>
@@ -23,16 +31,59 @@ End of Shift Projection : {{request.session.projection}}
 <br><br>
 <br><br>
 Last Shift Count: {{request.session.count1}}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.wd1}} 
+{{request.session.m1}}
+{{request.session.day1}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift1}} Shift
+
 <br><br>
 2nd Last Shift Count: {{request.session.count2}}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.wd2}} 
+{{request.session.m2}}
+{{request.session.day2}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift2}} Shift
 <br><br>
 3rd Last Shift Count: {{request.session.count3}}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.wd3}} 
+{{request.session.m3}}
+{{request.session.day3}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift3}} Shift
 <br><br>
 4th Last Shift Count: {{request.session.count4}}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.wd4}} 
+{{request.session.m4}}
+{{request.session.day4}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift4}} Shift
 <br><br>
 5th Last Shift Count: {{request.session.count5}}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.wd5}} 
+{{request.session.m5}}
+{{request.session.day5}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift5}} Shift
 <br><br>
 6th Last Shift Count: {{request.session.count6}}
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.wd6}} 
+{{request.session.m6}}
+{{request.session.day6}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift6}} Shift
 <br><br>
 
 
