--- a/trakberry/templates/track_10r.html
+++ b/trakberry/templates/track_10r.html
@@ -29,61 +29,63 @@ Current shift target: {{request.session.target}}
 
 End of Shift Projection : {{request.session.projection}}
 <br><br>
+<b><u>Previous Shifts</u></b>>
 <br><br>
-Last Shift Count: {{request.session.count1}}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.wd1}} 
 {{request.session.m1}}
 {{request.session.day1}},
 2020 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.shift1}} Shift
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count1}}
 <br><br>
-2nd Last Shift Count: {{request.session.count2}}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 {{request.session.wd2}} 
 {{request.session.m2}}
 {{request.session.day2}},
 2020 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.shift2}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count2}}
+
 <br><br>
-3rd Last Shift Count: {{request.session.count3}}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.wd3}} 
 {{request.session.m3}}
 {{request.session.day3}},
 2020 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.shift3}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count3}}
 <br><br>
-4th Last Shift Count: {{request.session.count4}}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.wd4}} 
 {{request.session.m4}}
 {{request.session.day4}},
 2020 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.shift4}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count4}}
 <br><br>
-5th Last Shift Count: {{request.session.count5}}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.wd5}} 
 {{request.session.m5}}
 {{request.session.day5}},
 2020 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.shift5}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count5}}
 <br><br>
-6th Last Shift Count: {{request.session.count6}}
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.wd6}} 
 {{request.session.m6}}
 {{request.session.day6}},
 2020 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.shift6}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count6}}
 <br><br>
 
 
