--- a/trakberry/templates/track_10r.html
+++ b/trakberry/templates/track_10r.html
@@ -29,7 +29,7 @@ Current shift target: {{request.session.target}}
 
 End of Shift Projection : {{request.session.projection}}
 <br><br>
-<b><u>Previous Shifts</u></b>>
+<b><u>Previous Shifts</u></b>
 <br><br>
 {{request.session.wd1}} 
 {{request.session.m1}}
