added 9 past days

--- a/trakberry/templates/track_10r.html
+++ b/trakberry/templates/track_10r.html
@@ -87,6 +87,33 @@ End of Shift Projection : {{request.session.projection}}
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {{request.session.count6}}
 <br><br>
+{{request.session.wd7}} 
+{{request.session.m7}}
+{{request.session.day7}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift7}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count7}}
+<br><br>
+{{request.session.wd8}} 
+{{request.session.m8}}
+{{request.session.day8}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift8}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count8}}
+<br><br>
+{{request.session.wd9}} 
+{{request.session.m9}}
+{{request.session.day9}},
+2020 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.shift9}} Shift
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+{{request.session.count9}}
+<br><br>
 
 
 
