--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -1,18 +1,96 @@
-{% extends "track.html" %}
 
-{% block main %}
-<br><br>
+<html>
+<body>
+<head>
+
+<script language="javascript" type="text/javascript"> 
+function windowClose() { 
+window.open('','_parent',''); 
+window.close();
+} 
+</script>
+
+	
+	
+</head>
+<!-- ******   Load Scripts for graphs  ****** -->
+	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+	<script type="text/javascript">
+
+
+<!-- **************************************** -->
+
+
+google.load('visualization', '1', {
+    packages: ['corechart', 'line']
+});
+google.setOnLoadCallback(drawCurveTypes);
+
+function drawCurveTypes() {
+
+	var obj = [
+			{% for item in GList %}
+            [new Date({{item.0}}*1000),{{item.1}},{{item.2}},{{item.3}}],
+            {% endfor %}
+        ];
+
+    var data = new google.visualization.DataTable();
+    data.addColumn('datetime', 'Date');
+    data.addColumn('number', 'Production');
+    data.addColumn('number', 'Target');
+	data.addColumn('number', '85% Target');
+	data.addRows(obj)
+
+ 
+    var options = {
+		title: "10R80 Current Shift Chart",
+		chartArea: {
+			backgroundColor: {
+				stroke: '#4322c0',
+				strokeWidth: 3
+			}
+		},
+		//backgroundColor: '#F5EBE1',
+        hAxis: {
+            title: 'Time',
+			format: "HH:mm",
+			gridlines: { count: 20 }
+			
+        },
+		
+        vAxis: {
+            title: 'Quantity',
+			gridlines: { count: 15 }
+        },
+        series: {
+            1: {
+                curveType: 'function'
+            }
+        }
+    };
+
+    var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+    chart.draw(data, options);
+}
+    </script>	
+    
+<!-- Begin HTML of Graph  -->
+
+
+<!-- End of Menu Bar -->
+
+<!-- <br><br>
+<input type="button" value="Close this window" onclick="windowClose();"> -->
 <!-- <meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/track_10r" /> -->
 <font size="6"><b><u>Live Tracking</u></b></font>
-<br><br><br><br>
 
-<!-- 
-{{dt}}
+<br>
+<div id="chart_div" style="width: 75%; height: 400px; "></div>
+<br>
+
+
+
 <br><br>
-shift time(sec):{{request.session.shift_time}}
-
- -->
-
 
 Current Shift Count: <b>{{request.session.count}}</b> 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -123,4 +201,6 @@ End of Shift Projection : {{request.session.projection}}
 
 <br><br>
 
-{% endblock %}
+</body>
+
+</html>
