updated the refresh rate

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -81,7 +81,7 @@ function drawCurveTypes() {
 
 <!-- <br><br>
 <input type="button" value="Close this window" onclick="windowClose();"> -->
-<!-- <meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/track_10r" /> -->
+<meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/track_10r" />
 <font size="6"><b><u>Live Tracking</u></b></font>
 
 <br>
