fixed tracking part problem

--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -15,25 +15,20 @@
 
 
         <div class="item1">
+
+			<!-- <select id="scrap_part" style="font-size:25px;widows: 100%;height:70px;" onchange="myFunction();" list="browsers" name="scrap_part"  {{request.session.scrap1}}>	
+                <option value="1" selected disabled>{{request.session.scrap_part}}</option>
+                {% for item in request.session.scrap_part_selection %}
+                <option value="{{item.0}}">{{item.0}}</option>
+                {% endfor %}
+			</select> -->
+			
 			<div class="bloc">
-				<select name="year" size="5">
-				  <option value="2010">2010</option>
-				  <option value="2011">2011</option>
-				  <option value="2012" >2012</option>
-				  <option value="2013">2013</option>
-				  
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
-				  <option value="2014">2014</option>
+				<!-- <select name="year" size="5"> -->
+					<select id="scrap_part" style="font-size:25px;width:100%;height:70px;" onchange="myFunction();" name="scrap_part"  {{request.session.scrap1}}>
+					{% for item in request.session.scrap_part_selection %}
+					<option value="{{item.0}}">{{item.0}}</option>
+					{% endfor %}
 				  
 				</select>
 			  </div>
