--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -43,7 +43,7 @@ function drawCurveTypes() {
 
  
     var options = {
-		title: "10R80 Current Shift Chart",
+		title: "Trilobe Current Shift Chart",
 		chartArea: {
 			backgroundColor: {
 				stroke: '#4322c0',
