made google chart js local

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -14,7 +14,11 @@ window.close();
 	
 </head>
 <!-- ******   Load Scripts for graphs  ****** -->
-	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+	<!-- <script type="text/javascript" src="https://www.google.com/jsapi"></script> -->
+
+	<script type="text/javascript" src="/static/style_1/loader.js"></script>
+
+
 	<script type="text/javascript">
 
 
